--- a/credit_scoring_fairness_criteria_marital.ipynb
+++ b/credit_scoring_fairness_criteria_marital.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "import os\n",
     "BANK_PATH = os.path.join(os.getcwd(), 'ml bank dataset/bankfullclean.csv') # Assign this to the location of the dataset\n",
-    "print(os.getcwd())\n",
+    "# print(os.getcwd())\n",
     "print(BANK_PATH)\n",
     "\n",
     "# 5254 number of rows have 'biY' == 1\n",
@@ -91,7 +91,7 @@
     "df.head()\n",
     "dummy = df[['catAge', 'job', 'marital','education','balance','day', 'month', 'duration', 'campaign', 'pdays', 'previous', 'Fmonth', 'biDefault', 'biHousing', 'biLoan']]\n",
     "# dummy.columns.values\n",
-    "dummy = pd.get_dummies(data=dummy)\n",
+    "dummy = pd.get_dummies(data=dummy) \n",
     "# dummy.head()\n",
     "dummy.columns.values\n",
     "# df['marital'].unique()\n",
@@ -335,7 +335,6 @@
     }
    ],
    "source": [
-    "\n",
     "confusion_matrix = confusion_matrix(test_df['biY'], test_df['pred'])\n",
     "confusion_matrix"
    ]
@@ -3015,68 +3014,6 @@
    "source": [
     "accuracy_clf_divorced = (confusion_matrix_divorced[0][0] + confusion_matrix_divorced[1][1]) / (confusion_matrix_divorced[0][0] + confusion_matrix_divorced[0][1] + confusion_matrix_divorced[1][0] + confusion_matrix_divorced[1][1])\n",
     "accuracy_clf_divorced # 0.8718606782768102"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Linear Regression model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import linear_model\n",
-    "linear_regression_model = linear_model.LinearRegression()\n",
-    "linear_regression_model.fit(x_train, y_train)\n",
-    "prediction = linear_regression_model.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "11879    0.111887\n",
-       "5653     0.111763\n",
-       "11198    0.126075\n",
-       "3957     0.111495\n",
-       "3762     0.112426\n",
-       "           ...   \n",
-       "42560    0.113807\n",
-       "44451    0.127561\n",
-       "9787     0.114586\n",
-       "10850    0.122021\n",
-       "16015    0.119516\n",
-       "Name: pred, Length: 9009, dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 125
-    }
-   ],
-   "source": [
-    "test_df = x_test.copy()\n",
-    "test_df['biY'] = y_test\n",
-    "test_df['pred'] = pd.Series(prediction, index=test_df.index)\n",
-    "\n",
-    "test_df['accurate'] = (test_df['pred'] == test_df['biY'])\n",
-    "test_df['pred']"
    ]
   }
  ],
